5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4327/executions/1846_1274.log
== SUBMITION (2019-06-26 13:23:35) 
-- CODE:
rom numpy import *

n = int(input("Numero: "))
m = zeros((n, n), dtype=int)

for i in range(n):
	for j in range(n):
		if i > j:
			m[i, j] = j+1
		elif i <= j:
			m[i, j] = i+1
	
print(m)
-- EXECUTION TIME:
0.614264
-- ERROR:
  File "/home/codebench/codes/1846/1274/main.py", line 1
    rom numpy import *
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 13:23:43) 
-- CODE:
rom numpy import *

n = int(input("Numero: "))
m = zeros((n, n), dtype=int)

for i in range(n):
	for j in range(n):
		if i > j:
			m[i, j] = j+1
		elif i <= j:
			m[i, j] = i+1
	
print(m)
-- EXECUTION TIME:
0.773165
-- ERROR:
  File "/home/codebench/codes/1846/1274/main.py", line 1
    rom numpy import *
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 13:24:06) 
-- CODE:
from numpy import *

n = int(input("Numero: "))
m = zeros((n, n), dtype=int)

for i in range(n):
	for j in range(n):
		if i > j:
			m[i, j] = j+1
		elif i <= j:
			m[i, j] = i+1
	
print(m)
-- EXECUTION TIME:
0.951517
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:
[[1]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
